--- a/srcs/requirements/MariaDB/Dockerfile
+++ b/srcs/requirements/MariaDB/Dockerfile
@@ -3,7 +3,8 @@ FROM debian:bullseye
 
 RUN apt-get update \
 	&& apt-get install -y mariadb-server \
-	&& apt-get clean
+	&& apt-get clean \
+	&& mkdir -p /run/mysqld
 
 EXPOSE 3306
 
