--- a/srcs/requirements/MariaDB/Dockerfile
+++ b/srcs/requirements/MariaDB/Dockerfile
@@ -4,7 +4,8 @@ FROM debian:bullseye
 RUN apt-get update \
 	&& apt-get install -y mariadb-server \
 	&& apt-get clean \
-	&& mkdir -p /run/mysqld
+	&& mkdir -p /run/mysqld \
+	&& chown -R mysql:mysql /run/mysqld
 
 EXPOSE 3306
 
