--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - inception_net
     volumes:
       - wordpress_site_data:/var/www/html:ro
-      - ./requirements/NGINX/default.conf:/etc/nginx/conf.d/default.conf:ro
+  - ./requirements/NGINX/default.conf:/etc/nginx/conf.d/default.conf
       - ./requirements/NGINX/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - wordpress
