--- a/srcs/requirements/NGINX/nginx.conf
+++ b/srcs/requirements/NGINX/nginx.conf
@@ -10,4 +10,5 @@ http {
     keepalive_timeout 65;
 
     # HTTPS server is defined in conf.d/default.conf
+    include /etc/nginx/conf.d/*.conf;
 }
