--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -45,7 +45,7 @@ services:
     env_file:
       - .env
     environment:
-      WORDPRESS_DB_HOST: mariadb:3306
+      WORDPRESS_DB_HOST: mariadb
       WORDPRESS_DB_USER: ${MARIADB_USER}
       WORDPRESS_DB_PASSWORD: ${MARIADB_PASSWORD}
       WORDPRESS_DB_NAME: ${MARIADB_DATABASE}
