--- a/srcs/requirements/MariaDB/Dockerfile
+++ b/srcs/requirements/MariaDB/Dockerfile
@@ -7,6 +7,9 @@ RUN apt-get update \
 	&& mkdir -p /run/mysqld \
 	&& chown -R mysql:mysql /run/mysqld
 
+# Copie le script d'init SQL
+COPY tools/init.sql /docker-entrypoint-initdb.d/init.sql
+
 EXPOSE 3306
 
 USER mysql
