--- a/srcs/requirements/MariaDB/Dockerfile
+++ b/srcs/requirements/MariaDB/Dockerfile
@@ -4,13 +4,18 @@ FROM debian:bullseye
 RUN apt-get update \
 	&& apt-get install -y mariadb-server \
 	&& apt-get clean \
-	&& mkdir -p /run/mysqld \
+
+RUN mkdir -p /run/mysqld \
 	&& chown -R mysql:mysql /run/mysqld
+	&& chmod 777 /run/mysqld
 
 # Copie le script d'init SQL
-#COPY tools/init.sql /docker-entrypoint-initdb.d/init.sql
+COPY tools/init.sql /docker-entrypoint-initdb.d/init.sql
+RUN chmod +x /docker-entrypoint-initdb.d/init.sql
 
 EXPOSE 3306
+
+
 
 USER mysql
 CMD ["mysqld"]
