--- a/srcs/requirements/MariaDB/Dockerfile
+++ b/srcs/requirements/MariaDB/Dockerfile
@@ -3,10 +3,10 @@ FROM debian:bullseye
 
 RUN apt-get update \
 	&& apt-get install -y mariadb-server \
-	&& apt-get clean \
+	&& apt-get clean
 
 RUN mkdir -p /run/mysqld \
-	&& chown -R mysql:mysql /run/mysqld
+	&& chown -R mysql:mysql /run/mysqld \
 	&& chmod 777 /run/mysqld
 
 # Copie le script d'init SQL
