--- a/srcs/.env
+++ b/srcs/.env
@@ -14,6 +14,6 @@ WP_TITLE=MonSite
 WP_ADMIN_USER=superuser
 WP_ADMIN_PASSWORD=motdepasseadmin
 WP_ADMIN_EMAIL=admin@example.com
-WP_USER2=user2
-WP_USER2_EMAIL=user2@example.com
-WP_USER2_PASSWORD=motdepasseuser2
+WP_USER=user
+WP_USER_EMAIL=user@example.com
+WP_USER_PASSWORD=motdepasseuser
