--- a/srcs/requirements/NGINX/tools/nginx.conf
+++ b/srcs/requirements/NGINX/tools/nginx.conf
@@ -1,14 +1,65 @@
 events {
-    worker_connections 1024;
+	worker_connections 1024;
 }
 
 http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
+	include /etc/nginx/mime.types;
 
-    sendfile on;
-    keepalive_timeout 65;
+	server {
+		listen 443 ssl;
+		server_name ${DOMAIN_NAME};
+
+		ssl_protocols TLSv1.2 TLSv1.3;
+		ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
+		ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
+
+		root /var/www/wordpress;
+		index index.php index.html;
+
+		location / {
+			try_files $uri $uri/ =404;
+		}
+
+		location ~ \.php$ {
+			include snippets/fastcgi-php.conf;
+			fastcgi_pass wordpress:9000;
+		}
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#events {
+#    worker_connections 1024;
+#}
+
+#http {
+#    include /etc/nginx/mime.types;
+#    default_type application/octet-stream;
+
+#    sendfile on;
+#    keepalive_timeout 65;
 
     # HTTPS server is defined in conf.d/default.conf
-    include /etc/nginx/conf.d/*.conf;
-}
+#    include /etc/nginx/conf.d/*.conf;
+#}
