--- a/srcs/requirements/NGINX/tools/nginx.conf
+++ b/srcs/requirements/NGINX/tools/nginx.conf
@@ -3,6 +3,8 @@ events {
 }
 
 http {
+	error_log  /dev/stderr warn;
+	access_log /dev/stdout;
 	include /etc/nginx/mime.types;
 
 	server {
@@ -23,43 +25,9 @@ http {
 		location ~ \.php$ {
 			include snippets/fastcgi-php.conf;
 			fastcgi_pass wordpress:9000;
+#			fastcgi_index index.php;
+    		fastcgi_param SCRIPT_FILENAME /var/www/wordpress$fastcgi_script_name;
+		    include fastcgi_params;
 		}
 	}
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-#events {
-#    worker_connections 1024;
-#}
-
-#http {
-#    include /etc/nginx/mime.types;
-#    default_type application/octet-stream;
-
-#    sendfile on;
-#    keepalive_timeout 65;
-
-    # HTTPS server is defined in conf.d/default.conf
-#    include /etc/nginx/conf.d/*.conf;
-#}
