--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,4 +1,3 @@
-
 #version: '3.8'
 
 services:
@@ -12,9 +11,10 @@ services:
     networks:
       - inception_net
     volumes:
-    - wordpress_site_data:/var/www/html:ro
-    - ./requirements/NGINX/default.conf:/etc/nginx/conf.d/default.conf
-    - ./requirements/NGINX/nginx.conf:/etc/nginx/nginx.conf:ro
+      - wordpress_site_data:/var/www/wordpress:ro
+      - ./requirements/NGINX/tools/default.conf:/etc/nginx/conf.d/default.conf
+      - ./requirements/NGINX/tools/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./requirements/NGINX/tools/openssl.cnf:/openssl.cnf
     depends_on:
       - wordpress
 
@@ -54,7 +54,7 @@ services:
     ports:
       - "9000:9000"
     volumes:
-      - wordpress_site_data:/var/www/html
+      - wordpress_site_data:/var/www/wordpress
     networks:
       - inception_net
 
