--- a/srcs/requirements/NGINX/tools/nginx.conf
+++ b/srcs/requirements/NGINX/tools/nginx.conf
@@ -1,33 +1,49 @@
+# Events block: configure connection handling for the nginx worker processes
 events {
+	# Maximum number of simultaneous connections that can be opened by a worker
 	worker_connections 1024;
 }
 
+# HTTP block: global HTTP server configuration and included MIME types
 http {
+	# Log warnings and errors to stderr so container logs capture them
 	error_log  /dev/stderr warn;
+	# Send access logs to stdout for container-friendly logging
 	access_log /dev/stdout;
+	# Load mappings between file extensions and MIME types
 	include /etc/nginx/mime.types;
 
+	# Server block: defines a virtual server listening on port 443 with SSL
 	server {
+		# Listen on HTTPS and enable SSL for this server
 		listen 443 ssl;
+		# The server_name variable for virtual hosting (set via env or config)
 		server_name ${DOMAIN_NAME};
 
+		# SSL configuration: allowed protocols and certificate locations
 		ssl_protocols TLSv1.2 TLSv1.3;
 		ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
 		ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
 
+		# Document root and default index files for this server
 		root /var/www/wordpress;
 		index index.php index.html;
 
+		# Location for the site root: serve static files or return 404
 		location / {
 			try_files $uri $uri/ =404;
 		}
 
+		# PHP handling: pass PHP requests to the upstream FastCGI (PHP-FPM)
 		location ~ \.php$ {
+			# Standard FastCGI parameters for PHP processing
 			include snippets/fastcgi-php.conf;
+			# Forward PHP requests to the 'wordpress' service on port 9000
 			fastcgi_pass wordpress:9000;
-#			fastcgi_index index.php;
-    		fastcgi_param SCRIPT_FILENAME /var/www/wordpress$fastcgi_script_name;
-		    include fastcgi_params;
+			# Set the SCRIPT_FILENAME so PHP-FPM knows which file to execute
+			fastcgi_param SCRIPT_FILENAME /var/www/wordpress$fastcgi_script_name;
+			# Include any additional FastCGI parameters
+			include fastcgi_params;
 		}
 	}
 }
