--- a/srcs/requirements/NGINX/Dockerfile
+++ b/srcs/requirements/NGINX/Dockerfile
@@ -1,16 +1,17 @@
 FROM debian:bookworm
 
-# Install openssl for certificate generation
+# Update package lists, upgrade installed packages, install nginx and openssl, then clean apt cache
 RUN apt update -y && apt upgrade -y && \
-    apt install -y nginx openssl && \
-    apt clean && rm -rf /var/lib/apt/lists/*
+	apt install -y nginx openssl && \
+	apt clean && rm -rf /var/lib/apt/lists/*
 
-# Copier le fichier de configuration avant de générer le certificat
+# Copy the OpenSSL configuration file before generating the certificate
 COPY ./tools/openssl.cnf /openssl.cnf
 
+# Ensure the /etc/ssl directory exists
 RUN mkdir -p /etc/ssl
 
-# Generate self-signed certificate
+# Create private and cert directories and generate a self-signed certificate using the provided OpenSSL config
 RUN mkdir -p /etc/ssl/private /etc/ssl/certs && \
 	openssl req -x509 -nodes -days 365 \
 	-newkey rsa:2048 \
@@ -18,6 +19,8 @@ RUN mkdir -p /etc/ssl/private /etc/ssl/certs && \
 	-out /etc/ssl/certs/nginx-selfsigned.crt \
 	-config /openssl.cnf
 
+# Copy the custom Nginx configuration into the container
 COPY ./tools/nginx.conf /etc/nginx/nginx.conf
 
+# Start nginx in the foreground
 CMD ["nginx", "-g", "daemon off;"]
