--- a/srcs/.env
+++ b/srcs/.env
@@ -10,7 +10,7 @@ MARIADB_PASSWORD=wp_password
 DOMAIN_NAME=benpicar.42.fr
 
 # Variables pour l'installation automatisée de WordPress
-WP_TITLE=MonSite
+WP_TITLE=InceptionSite
 WP_ADMIN_USER=superuser
 WP_ADMIN_PASSWORD=motdepasseadmin
 WP_ADMIN_EMAIL=admin@example.com
